# embassy-zynq

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
embassy-zynq-7000/: Cargo.toml  README.md
embassy-zynq-7000/src/: lib.rs
embassy-zynq-usplus/: Cargo.toml  README.md
embassy-zynq-usplus/src/: lib.rs
examples/artyZ7-20/: Cargo.toml
examples/artyZ7-20/.cargo/: config.toml
